--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,27 @@ services:
     ports:
       - '6379:6379'
 
+  zookeeper:
+    image: wurstmeister/zookeeper
+    networks:
+      - coupon_network
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: wurstmeister/kafka:2.12-2.5.0
+    networks:
+      - coupon_network
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
 networks:
   coupon_network:
     driver: bridge
